--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootswatch": "^4.4.1",
     "core-js": "^3.6.4",
+    "firebase": "^7.9.3",
     "register-service-worker": "^1.6.2",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuefire": "^2.2.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
